# assignment1-handout

./: .gitignore  README.md  colcon.pkg  package.xml  setup.cfg  setup.py
config/: rocky0704_model_params.yaml
data/: download.py
quadrotor_simulator_py/: __init__.py
quadrotor_simulator_py/quadrotor_control/: __init__.py  attitudepd.py  cascaded_command.py  positionpd.py  state.py  trackingerror.py
quadrotor_simulator_py/quadrotor_model/: __init__.py  mixer.py  model.py
quadrotor_simulator_py/utils/: __init__.py  geometry.py  pose.py  quaternion.py  rotation3.py
test/: test_ang_acc_com_offset.py  test_angular_acceleration.py  test_att_ctrl.py  test_lin_acc.py  test_linear_acceleration.py  test_ode_step.py  test_orientation.py  test_pos_ctrl.py  test_pose.py  test_quadrotor_simulation.py
