<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>quadrotor_simulator_py</name>
  <version>0.0.0</version>
  <description>Pure python quadrotor simulator</description>
  <maintainer email="wtabib@cmu.edu">Wennie Tabib</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
